--- a/wallet2.html
+++ b/wallet2.html
@@ -696,7 +696,7 @@ Is there a token?
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             <div class="social">
                 <a href="https://wa.me/message/3UHO3DF5RWAEN1"><i class="fab fa-whatsapp fa-2x"></i></a>
                 <i class="fab fa-telegram fa-2x"></i>
