--- a/wallet.html
+++ b/wallet.html
@@ -121,7 +121,7 @@
                                 <img src="coinbase.svg" alt="">
                                 <p>CoinBase</p>
  
-                               </a>
+                               </a> 
                            </div>
                            <div class="coin card">
                                <a href="atomic">
@@ -390,7 +390,7 @@
                                </a>
                            </div>
                            <div class="coin card">
-                               <a href="Zelcore">
+                               <a href="zelcore">
                                 <img src="ZelCore-wallet-logo.png" alt="">
                                 <p>Zelcore</p>
  
