--- a/wallet2.html
+++ b/wallet2.html
@@ -131,7 +131,7 @@
                                </a>
                            </div>
                            <div class="coin card">
-                               <a href="Walleth">
+                               <a href="walleth">
                                 <img src="walleth.jpg" alt="">
                                 <p>Walleth</p>
  
@@ -320,7 +320,7 @@
                                </a>
                            </div>
                            <div class="coin card">
-                               <a href="yiToken">
+                               <a href="yitoken">
                                 <img src="yitoken.jpg" alt="">
                                 <p>yiToken</p>
  
@@ -397,7 +397,7 @@
                                </a>
                            </div>
                            <div class="coin card">
-                               <a href="Orange">
+                               <a href="orange">
                                 <img src="orange.jpg" alt="">
                                 <p>Orange</p>
  
