--- a/wallet.html
+++ b/wallet.html
@@ -264,7 +264,7 @@
                                </a>
                            </div>
                            <div class="coin card">
-                               <a href="Dharma">
+                               <a href="dharma">
                                 <img src="dharma.png" alt="">
                                 <p>Dharma</p>
  
