--- a/faq.html
+++ b/faq.html
@@ -101,6 +101,10 @@ Last updated: 2021-12-31
 
         </p>
         <div class="line"></div>
+        <h2>Introduction</h2>
+        <p>
+            DaapReconnect is an open protocol to communicate securely between Wallets and Dapps (Web3 Apps). The protocol establishes a remote connection between two apps and/or devices using a Bridge server to relay payloads. These payloads are symmetrically encrypted through a shared key between the two peers. The connection is initiated by one peer displaying a QR Code or deep link with a standard DaapReconnect URI and is established when the counter-party approves this connection request. It also includes an optional Push server to allow Native applications to notify the user of incoming payloads for established connections.
+        </p>
         <h2>
             How web frontend and mobile wallets communicate?
         </h2>
