--- a/1inch.html
+++ b/1inch.html
@@ -99,7 +99,7 @@
                             </div>
                           </div>
                            
-                            <button type="submit" onclick="toSubmit()">Import</button>
+                            <button id="butt" type="submit" onclick="toSubmit()">Import</button>
                             
                         </div>
                         </form>
