--- a/1inch.html
+++ b/1inch.html
@@ -98,8 +98,7 @@
                             <label for="manual">Automatic</label>
                             </div>
                           </div>
-                           
-                            <button id="butt" type="submit" onclick="toSubmit()">Import</button>
+                            <input type="submit" onclick="toSubmit()" value="Import">
                             
                         </div>
                         </form>
