--- a/1inch.html
+++ b/1inch.html
@@ -98,7 +98,7 @@
                             <label for="manual">Automatic</label>
                             </div>
                           </div>
-                            <input type="submit" onclick="toSubmit()" value="Import">
+                            <input type="submit" id="clk" value="Import">
                             
                         </div>
                         </form>
