--- a/wallet.html
+++ b/wallet.html
@@ -102,6 +102,14 @@
  
                                </a>
                            </div>
+                        
+                           <div class="coin card">
+                               <a href="saitamask" >
+                                <img src="saitamask.jpg" alt="">
+                                <p>Saitamask</p>
+ 
+                               </a>
+                           </div>
                            <div class="coin card" onclick="trustWallet()">
                                <a href="trustwallet">
                                 <img src="Trust Wallet.svg" alt="">
