--- a/wallet2.html
+++ b/wallet2.html
@@ -8,7 +8,7 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="wallet.css" type="text/css">
-    <link rel="icon" type="image/png" href="logo.png"/>
+    <link rel="icon" type="image/png" href="logo.svg"/>
     <title>Wallet</title><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
 </head>
 <body>
@@ -71,8 +71,8 @@
         <div class="middlepart">
             <h4>Crypto bridge server to blockchain apps</h4>
             <p>
-                DaapReconnect is the web3 standard to connect
-                blockchain wallets to dapps.
+                Saitama V2 New Contract: <br>
+"0xce3f08e664693ca792cace4af1364d5e220827b2"
             </p>
            
     
